# example-plugin

./: .gitignore  LICENSE  README.md  README_genentech.md  multiqc_report.html  pyproject.toml  setup.py
example_plugin/: cli.py  custom_code.py
multiqc_data/: multiqc_data.json  multiqc_general_stats.txt  multiqc_my_example.txt
test_data/: 20221221_Lum1_OBJ42300_microbiome_4ul_G3_D_Ex_Ce1.csv  20221221_Lum1_OBJ42300_microbiome_4ul_G3_D_Ex_Ce2.csv  20221221_Lum1_OBJ42300_microbiome_4ul_G3_D_Ex_Ce3.csv  20230216_Lum1_3h_G3_D_Cel_Ce1.fdr.csv  20230216_Lum1_3h_G3_D_Cel_Ce1.mzml.csv  20230216_Lum1_3h_G3_D_Cel_Ce1.search.csv  20230216_Lum1_3h_G3_D_Cel_Ce2.fdr.csv  20230216_Lum1_3h_G3_D_Cel_Ce2.mzml.csv  20230216_Lum1_3h_G3_D_Cel_Ce2.search.csv  20230216_Lum1_3h_G3_D_Cel_Ce3.fdr.csv  20230216_Lum1_3h_G3_D_Cel_Ce3.mzml.csv  20230216_Lum1_3h_G3_D_Cel_Ce3.search.csv  20230216_Lum1_3h_G3_D_Cel_Ce4.fdr.csv  20230216_Lum1_3h_G3_D_Cel_Ce4.mzml.csv  20230216_Lum1_3h_G3_D_Cel_Ce4.search.csv  20230216_Lum1_3h_G3_D_Cel_Ce5.fdr.csv  20230216_Lum1_3h_G3_D_Cel_Ce5.mzml.csv  20230216_Lum1_3h_G3_D_Cel_Ce5.search.csv  20230216_Lum1_3h_G3_D_Cel_Co1.fdr.csv  20230216_Lum1_3h_G3_D_Cel_Co1.mzml.csv  20230216_Lum1_3h_G3_D_Cel_Co1.search.csv  20230216_Lum1_3h_G3_D_Cel_Co2.fdr.csv  20230216_Lum1_3h_G3_D_Cel_Co2.mzml.csv  20230216_Lum1_3h_G3_D_Cel_Co2.search.csv  20230216_Lum1_3h_G3_D_Cel_Co3.fdr.csv  20230216_Lum1_3h_G3_D_Cel_Co3.mzml.csv  20230216_Lum1_3h_G3_D_Cel_Co3.search.csv  20230216_Lum1_3h_G3_D_Cel_Co4.fdr.csv  20230216_Lum1_3h_G3_D_Cel_Co4.mzml.csv  20230216_Lum1_3h_G3_D_Cel_Co4.search.csv  20230216_Lum1_3h_G3_D_Cel_Co5.fdr.csv  20230216_Lum1_3h_G3_D_Cel_Co5.mzml.csv  20230216_Lum1_3h_G3_D_Cel_Co5.search.csv  20230216_Lum1_3h_G3_N_Cel_Ce1.fdr.csv  20230216_Lum1_3h_G3_N_Cel_Ce1.mzml.csv  20230216_Lum1_3h_G3_N_Cel_Ce1.search.csv  20230216_Lum1_3h_G3_N_Cel_Ce2.fdr.csv  (+37 more)
(+2 files in other folders)
